Fix mobile view (navbar won't uncollapse), footer doesn't stick to bottom

--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -75,7 +75,7 @@ h1 {
 
 .footer{
     background-color: #35880f;
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     width: 100%;
     height: 35px;
